# SC3020-Project

./: .gitignore  150 Tree.txt  BPTree.cpp  BPTree.h  BPlus_Tree.cpp  BPlus_Tree.h  CMakeLists.txt  DiskManager.cpp  DiskManager.h  FileManager.cpp  FileManager.h  List.h  Node.cpp  Node.h  README.md  Record.cpp  Record.h  main.cpp  tempStruct.cpp  tempStruct.h
Project 1/: DiskManager.cpp  DiskManager.h  FileManager.cpp  FileManager.h  List.h  Node.cpp  Node.h  README.md  Record.cpp  Record.h  main.cpp  tempStruct.cpp  tempStruct.h
Project1/: DiskManager.cpp  DiskManager.h  Project1.cpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Record.cpp  Record.h
Project1/Debug/: Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  vc142.idb
Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
